--- a/css/main.css
+++ b/css/main.css
@@ -86,16 +86,15 @@ header {
 }
 #main .txtBox p {
     animation: fadeIn 2s;
+    animation-fill-mode: forwards;
 }
 #main .txtBox p.middle {
     opacity: 0;
     animation-delay: 1.5s;
-    animation-fill-mode: forwards;
 }
 #main .txtBox p.bottom {
     opacity: 0;
     animation-delay: 2.5s;
-    animation-fill-mode: forwards;
 }
 #main .txtBox:before {
     position: absolute;
@@ -234,11 +233,16 @@ header {
 #about .skills .tabContent li {
     width: 100%;
     height: 600px;
-    padding: 25px;
+    padding: 30px;
     display: none;
 }
 #about .skills .tabContent li.on {
     display: block;
+}
+#about .skills .tabContent li h3 {
+    font-size: 2.4rem;
+    font-weight: 700;
+    margin-bottom: 15px;
 }
 
 @keyframes fadeIn {
