--- a/css/main.css
+++ b/css/main.css
@@ -239,12 +239,12 @@ header {
 #about .skills .tabContent li .images ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    margin-top: 50px;
 }
 #about .skills .tabContent li .images li {
     max-width: 250px;
-    height: 150px;
-    margin-right: 10px;
+    height: 120px;
+    margin-right: 25px;
 }
 #about .skills .tabContent li .images .android {
     align-self: flex-start;
