--- a/css/main.css
+++ b/css/main.css
@@ -261,6 +261,44 @@ header {
     font-weight: 700;
     margin-bottom: 15px;
 }
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 999;
+    display: none;
+}
+.modal.on {
+    display: block;
+}
+.modal .imgBox {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    height: 80vh;
+}
+.modal .imgBox .img {
+    height: 100%;
+}
+.modal .btnClose {
+    position: absolute;
+    top: 30px;
+    right: 50px;
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    border: none;
+    background-color: transparent;
+}
+.modal .btnClose i {
+    font-size: 3.6rem;
+    font-weight: 500;
+    color: #fff;
+}
 
 @keyframes fadeIn {
     from {
