--- a/css/main.css
+++ b/css/main.css
@@ -251,14 +251,13 @@ header {
     display: flex;
     flex-wrap: wrap;
     margin-top: 50px;
+    justify-content: space-around;
 }
 #about .skills .tabContent li .images li {
     max-width: 250px;
     height: 120px;
     margin-right: 25px;
-}
-#about .skills .tabContent li .images .android {
-    align-self: flex-start;
+    margin-bottom: 15px;
 }
 #about .skills .tabContent li .images li img {
     height: 100%;
@@ -290,6 +289,7 @@ header {
     top: 50%;
     transform: translate(-50%,-50%);
     height: 80vh;
+    background-color: #fff;
 }
 .modal .imgBox .img {
     height: 100%;
@@ -310,6 +310,34 @@ header {
     color: #fff;
 }
 
+footer {
+    background-color: #333;
+    font-size: 1.4rem;
+    padding: 50px 150px;
+    color: rgba(255, 255, 255, 0.8);
+}
+footer address li {
+    margin: 15px 0;
+}
+footer address span {
+    display: inline-block;
+    font-weight: 700;
+    width: 90px;
+    margin-right: 10px;
+    position: relative;
+}
+footer address span:after {
+    display: block;
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 1px;
+    background-color: rgba(255,255,255,0.8);
+}
+
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -318,3 +346,7 @@ header {
         opacity: 1;
     }
 }
+
+/* @keyframes scrollMove {
+    
+} */
