--- a/css/main.css
+++ b/css/main.css
@@ -287,6 +287,7 @@ header {
     position: absolute;
     left: 50%;
     top: 50%;
+    padding: 15px 0;
     transform: translate(-50%,-50%);
     height: 80vh;
     background-color: #fff;
