--- a/css/main.css
+++ b/css/main.css
@@ -284,10 +284,11 @@ header {
     display: block;
 }
 .modal .imgBox {
+    text-align: center;
     position: absolute;
     left: 50%;
     top: 50%;
-    padding: 15px 0;
+    padding: 30px 0;
     transform: translate(-50%,-50%);
     height: 80vh;
     background-color: #fff;
